--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ensuring HTML Semantics</title>
 </head>
 <body>
+
+    <h1>My name is Ndukwe Samuel</h1>
+
+  <p>I am a motivated professional with a strong desire to learn.</p>
+  <h2>My goals for this internship are</h2>
+  <ul>
+      <li>Technical Skills Mastery</li>
+      <li>Interpersonal Skills Improvement (Soft Skills)</li>
+      <li>Building a Network of Contacts</li>
+      <li>find work from home</li>
+  </ul>
     
 </body>
 </html>
